--- a/index.html
+++ b/index.html
@@ -28,27 +28,33 @@
 
     /* ===== HEADER ===== */
     header {
-      background: var(--light);
-      border-bottom: 4px solid var(--red);
+      background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
+      border-bottom: 6px solid var(--red);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.35);
     }
 
     .nav {
       max-width: 1200px;
       margin: auto;
-      padding: 1rem;
+      padding: 1.25rem 1rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
 
     .nav img {
-      height: 70px;
+      height: 72px;
+      background: linear-gradient(135deg, #111, #1f1f1f);
+      padding: 1rem 1.25rem;
+      border-radius: 8px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.45);
     }
 
     .nav-phone {
-      font-size: 1.2rem;
-      font-weight: 700;
-      color: var(--red);
+      font-size: 1.25rem;
+      font-weight: 800;
+      color: #fff;
+      letter-spacing: 0.5px;
     }
 
     /* ===== HERO ===== */
