--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   <header class="header">
     <div class="header-bg"></div>
     <div class="nav">
-      <img src="keystone-wordmark.png"
+      <img src="keystone-wordmark-final.png"
            alt="Keystone Backflow Services"
            class="wordmark-img" />
 
