--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       --orange: #f57c00;
       --steel: #2b2b2b;
       --light: #ffffff;
-      --gray: #f2f2f2;
+      --gray: #f4f4f4;
     }
 
     * { box-sizing: border-box; }
@@ -31,35 +31,23 @@
 
     /* ================= HEADER ================= */
 
-    .header {
-      position: relative;
+    header {
       background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
       border-bottom: 6px solid var(--red);
       box-shadow: 0 6px 20px rgba(0,0,0,0.35);
-      overflow: hidden;
-    }
-
-    .header-bg {
-      position: absolute;
-      inset: 0;
-      background: url("HQ transparent-04.png") center 65% / 520px no-repeat;
-      opacity: 0.08;
-      pointer-events: none;
     }
 
     .nav {
-      position: relative;
       max-width: 1200px;
       margin: auto;
       padding: 1.5rem 1rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      z-index: 1;
     }
 
-    .wordmark-img {
-      height: 64px;
+    .wordmark {
+      height: 58px;
       filter: drop-shadow(0 6px 14px rgba(0,0,0,0.6));
     }
 
@@ -67,38 +55,44 @@
       font-size: 1.25rem;
       font-weight: 800;
       color: #ffffff;
-      letter-spacing: 0.5px;
     }
 
     /* ================= HERO ================= */
 
     .hero {
+      position: relative;
       background: var(--gray);
       padding: 5rem 1rem;
+      overflow: hidden;
+    }
+
+    /* Subtle gauge motif */
+    .hero::after {
+      content: "";
+      position: absolute;
+      right: -90px;
+      bottom: -80px;
+      width: 520px;
+      height: 520px;
+      background: url("HQ transparent-04.png") no-repeat center / contain;
+      opacity: 0.06;
+      pointer-events: none;
     }
 
     .hero-inner {
+      position: relative;
       max-width: 1200px;
       margin: auto;
-      display: grid;
-      grid-template-columns: 1.2fr 0.8fr;
-      gap: 3rem;
-      align-items: center;
-    }
-
-    .hero-logo img {
-      max-width: 100%;
-      height: auto;
     }
 
     .hero h1 {
       font-size: 3rem;
-      margin: 0 0 1rem;
+      margin-bottom: 1rem;
     }
 
     .hero p {
       font-size: 1.25rem;
-      max-width: 600px;
+      max-width: 700px;
     }
 
     .hero-cta {
@@ -111,7 +105,7 @@
       border-radius: 6px;
     }
 
-    /* ================= SECTIONS ================= */
+    /* ================= SERVICES ================= */
 
     section {
       padding: 4rem 1rem;
@@ -163,22 +157,7 @@
       font-weight: 600;
     }
 
-    .strip strong {
-      color: var(--orange);
-    }
-
-    /* ================= ABOUT ================= */
-
-    .about {
-      background: #f7f7f7;
-      text-align: center;
-    }
-
-    .about-inner {
-      max-width: 900px;
-      margin: auto;
-      font-size: 1.15rem;
-    }
+    .strip strong { color: var(--orange); }
 
     /* ================= CONTACT ================= */
 
@@ -192,8 +171,6 @@
       color: var(--red);
     }
 
-    /* ================= FOOTER ================= */
-
     footer {
       background: #1b1b1b;
       color: #ccc;
@@ -205,12 +182,10 @@
     /* ================= RESPONSIVE ================= */
 
     @media (max-width: 900px) {
-      .hero-inner {
-        grid-template-columns: 1fr;
-      }
+      .hero h1 { font-size: 2.4rem; }
 
-      .hero h1 {
-        font-size: 2.4rem;
+      .wordmark {
+        height: 50px;
       }
     }
   </style>
@@ -219,12 +194,11 @@
 <body>
 
   <!-- HEADER -->
-  <header class="header">
-    <div class="header-bg"></div>
+  <header>
     <div class="nav">
       <img src="keystone-wordmark-final.png"
            alt="Keystone Backflow Services"
-           class="wordmark-img" />
+           class="wordmark" />
 
       <div class="nav-phone">
         <a href="tel:8137611314">(813) 761-1314</a>
@@ -235,20 +209,12 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-inner">
-      <div>
-        <h1>Serious Protection for Florida’s Water Supply</h1>
-        <p>
-          Keystone Backflow Services provides certified testing, precision repairs,
-          preventative maintenance, and full compliance reporting throughout
-          West Central Florida.
-        </p>
-        <a class="hero-cta" href="tel:8137611314">Schedule Service</a>
-      </div>
-
-      <div class="hero-logo">
-        <img src="HQ transparent-01.png"
-             alt="Keystone Backflow Services Full Logo" />
-      </div>
+      <h1>Certified Backflow Protection You Can Trust</h1>
+      <p>
+        Keystone Backflow Services provides professional testing, repairs,
+        maintenance, and compliance reporting throughout West Central Florida.
+      </p>
+      <a class="hero-cta" href="tel:8137611314">Schedule Service</a>
     </div>
   </section>
 
@@ -257,18 +223,18 @@
     <h2 class="section-title">Backflow Services</h2>
     <div class="services">
       <div class="service">
-        <h3>Certified Testing</h3>
+        <h3>Backflow Testing</h3>
         <p>
-          Annual and routine backflow testing performed by certified professionals
-          to meet all local and state requirements.
+          Certified annual and routine testing to meet all local and state
+          requirements.
         </p>
       </div>
 
       <div class="service">
         <h3>Repairs & Maintenance</h3>
         <p>
-          Fast, reliable repairs and preventative maintenance to keep your
-          backflow preventers operating at peak performance.
+          Reliable repairs and preventative maintenance to keep your backflow
+          systems operating correctly.
         </p>
       </div>
 
@@ -276,7 +242,7 @@
         <h3>Compliance Reporting</h3>
         <p>
           We submit all required documentation directly to water authorities so
-          you remain compliant without the paperwork headaches.
+          you stay compliant without the paperwork.
         </p>
       </div>
     </div>
@@ -287,22 +253,9 @@
     Serving <strong>West Central Florida</strong> • Residential • Commercial • Municipal
   </div>
 
-  <!-- ABOUT -->
-  <section class="about">
-    <div class="about-inner">
-      <h2 class="section-title">Why Keystone</h2>
-      <p>
-        Built on accountability, precision, and no-excuses workmanship, Keystone
-        Backflow Services protects your water system and handles compliance
-        from start to finish.
-      </p>
-    </div>
-  </section>
-
   <!-- CONTACT -->
   <section class="contact">
     <h2 class="section-title">Call Today</h2>
-    <p>Fast scheduling. Clear pricing. Professional results.</p>
     <p><a href="tel:8137611314">(813) 761-1314</a></p>
   </section>
 
