Update hero section background and structure

--- a/index.html
+++ b/index.html
@@ -61,9 +61,16 @@
 
     .hero {
       position: relative;
-      background: var(--gray);
       padding: 5rem 1rem;
       overflow: hidden;
+      background:
+        linear-gradient(
+          135deg,
+          #ffffff 0%,
+          #ffffff 45%,
+          #f0f0f0 45%,
+          #f4f4f4 100%
+        );
     }
 
     /* Subtle gauge motif */
@@ -219,74 +226,68 @@
 
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <div class="nav">
-      <img src="keystone-wordmark-final.png"
-           alt="Keystone Backflow Services"
-           class="wordmark" />
+<header>
+  <div class="nav">
+    <img src="keystone-wordmark-final.png"
+         alt="Keystone Backflow Services"
+         class="wordmark" />
 
-      <div class="nav-phone">
-        <a href="tel:8137611314">(813) 761-1314</a>
-      </div>
+    <div class="nav-phone">
+      <a href="tel:8137611314">(813) 761-1314</a>
     </div>
-  </header>
-
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-inner">
-      <div>
-        <h1>Serious Protection for Florida’s Water Supply</h1>
-        <p>
-          Keystone Backflow Services provides certified testing, precision repairs,
-          preventative maintenance, and full compliance reporting throughout
-          West Central Florida.
-        </p>
-        <a class="hero-cta" href="tel:8137611314">Schedule Service</a>
-      </div>
-
-      <div class="hero-badge">
-        <span>100%</span>
-        Code-Compliant<br />
-        Backflow Protection
-      </div>
-    </div>
-  </section>
-
-  <!-- SERVICES -->
-  <section>
-    <h2 class="section-title">Backflow Services</h2>
-    <div class="services">
-      <div class="service">
-        <h3>Backflow Testing</h3>
-        <p>Certified annual and routine testing to meet all local and state requirements.</p>
-      </div>
-      <div class="service">
-        <h3>Repairs & Maintenance</h3>
-        <p>Reliable repairs and preventative maintenance to keep systems compliant.</p>
-      </div>
-      <div class="service">
-        <h3>Compliance Reporting</h3>
-        <p>We submit all required documentation directly to water authorities.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- STRIP -->
-  <div class="strip">
-    Serving <strong>West Central Florida</strong> • Residential • Commercial • Municipal
   </div>
+</header>
 
-  <!-- CONTACT -->
-  <section class="contact">
-    <h2 class="section-title">Call Today</h2>
-    <p><a href="tel:8137611314">(813) 761-1314</a></p>
-  </section>
+<section class="hero">
+  <div class="hero-inner">
+    <div>
+      <h1>Serious Protection for Florida’s Water Supply</h1>
+      <p>
+        Keystone Backflow Services provides certified testing, precision repairs,
+        preventative maintenance, and full compliance reporting throughout
+        West Central Florida.
+      </p>
+      <a class="hero-cta" href="tel:8137611314">Schedule Service</a>
+    </div>
 
-  <!-- FOOTER -->
-  <footer>
-    © Keystone Backflow Services • West Central Florida
-  </footer>
+    <div class="hero-badge">
+      <span>100%</span>
+      Code-Compliant<br />
+      Backflow Protection
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2 class="section-title">Backflow Services</h2>
+  <div class="services">
+    <div class="service">
+      <h3>Backflow Testing</h3>
+      <p>Certified annual and routine testing to meet all local and state requirements.</p>
+    </div>
+    <div class="service">
+      <h3>Repairs & Maintenance</h3>
+      <p>Reliable repairs and preventative maintenance to keep systems compliant.</p>
+    </div>
+    <div class="service">
+      <h3>Compliance Reporting</h3>
+      <p>We submit all required documentation directly to water authorities.</p>
+    </div>
+  </div>
+</section>
+
+<div class="strip">
+  Serving <strong>West Central Florida</strong> • Residential • Commercial • Municipal
+</div>
+
+<section class="contact">
+  <h2 class="section-title">Call Today</h2>
+  <p><a href="tel:8137611314">(813) 761-1314</a></p>
+</section>
+
+<footer>
+  © Keystone Backflow Services • West Central Florida
+</footer>
 
 </body>
 </html>
