--- a/index.html
+++ b/index.html
@@ -32,10 +32,28 @@
     /* ================= HEADER ================= */
 
     header {
-      background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
-      border-bottom: 6px solid var(--red);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.35);
-    }
+  position: relative;
+  background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
+  box-shadow: 0 6px 20px rgba(0,0,0,0.35);
+  overflow: hidden;
+}
+
+header::after {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  left: -40px;
+  width: 140%;
+  height: 6px;
+  background: linear-gradient(
+    90deg,
+    var(--red),
+    var(--orange)
+  );
+  transform: rotate(-6deg);
+  transform-origin: left center;
+}
+
 
     .nav {
       max-width: 1200px;
