--- a/index.html
+++ b/index.html
@@ -31,28 +31,32 @@
 
     /* ================= HEADER ================= */
 
-    header {
+header {
   position: relative;
   background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
   box-shadow: 0 6px 20px rgba(0,0,0,0.35);
   overflow: hidden;
 }
 
+/* Abstract gauge needle */
 header::after {
   content: "";
   position: absolute;
-  bottom: -6px;
-  left: -40px;
-  width: 140%;
-  height: 6px;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 5px;
   background: linear-gradient(
-    90deg,
-    var(--red),
-    var(--orange)
+    to left,
+    var(--red) 0%,
+    var(--orange) 18%,
+    rgba(211,47,47,0.85) 35%,
+    rgba(211,47,47,0.45) 60%,
+    rgba(211,47,47,0.15) 78%,
+    rgba(211,47,47,0.0) 100%
   );
-  transform: rotate(-6deg);
-  transform-origin: left center;
 }
+
 
 
     .nav {
