--- a/index.html
+++ b/index.html
@@ -31,41 +31,54 @@
 
     /* ================= HEADER ================= */
 
-header {
-  position: relative;
-  background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
-  box-shadow: 0 6px 20px rgba(0,0,0,0.35);
-  overflow: hidden;
-}
+    header {
+      position: relative;
+      background: linear-gradient(90deg, #0b0b0b, #1a1a1a);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.35);
+      overflow: hidden;
+    }
 
-/* Abstract gauge needle */
-header::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 5px;
-  background: linear-gradient(
-    to left,
-    var(--red) 0%,
-    var(--orange) 18%,
-    rgba(211,47,47,0.85) 35%,
-    rgba(211,47,47,0.45) 60%,
-    rgba(211,47,47,0.15) 78%,
-    rgba(211,47,47,0.0) 100%
-  );
-}
+    /* Literal gauge graphic */
+    header::before {
+      content: "";
+      position: absolute;
+      right: -120px;
+      bottom: -90px;
+      width: 360px;
+      height: 360px;
+      background: url("HQ transparent-04.png") no-repeat center / contain;
+      opacity: 0.22;
+      pointer-events: none;
+    }
 
-
+    /* Abstract needle traveling right → left */
+    header::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 5px;
+      background: linear-gradient(
+        to left,
+        var(--red) 0%,
+        var(--orange) 18%,
+        rgba(211,47,47,0.85) 35%,
+        rgba(211,47,47,0.45) 60%,
+        rgba(211,47,47,0.15) 78%,
+        rgba(211,47,47,0.0) 100%
+      );
+    }
 
     .nav {
+      position: relative;
       max-width: 1200px;
       margin: auto;
-      padding: 1.5rem 1rem;
+      padding: 1.5rem 1rem 1.75rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      z-index: 1;
     }
 
     .wordmark {
@@ -95,21 +108,7 @@ header::after {
         );
     }
 
-    /* Subtle gauge motif */
-    .hero::after {
-      content: "";
-      position: absolute;
-      right: -90px;
-      bottom: -80px;
-      width: 520px;
-      height: 520px;
-      background: url("HQ transparent-04.png") no-repeat center / contain;
-      opacity: 0.06;
-      pointer-events: none;
-    }
-
     .hero-inner {
-      position: relative;
       max-width: 1200px;
       margin: auto;
       display: grid;
@@ -241,6 +240,12 @@ header::after {
 
       .wordmark {
         height: 50px;
+      }
+
+      header::before {
+        right: -160px;
+        bottom: -140px;
+        opacity: 0.18;
       }
     }
   </style>
