--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <style>
     :root {
-      --red: #d32f2f;
+      --red: #ff2b2b;
       --orange: #f57c00;
       --steel: #2b2b2b;
       --light: #ffffff;
@@ -38,43 +38,26 @@
       overflow: hidden;
     }
 
-    /* Literal gauge graphic */
-    header::before {
-      content: "";
-      position: absolute;
-      right: -120px;
-      bottom: -90px;
-      width: 360px;
-      height: 360px;
-      background: url("HQ transparent-04.png") no-repeat center / contain;
-      opacity: 0.22;
-      pointer-events: none;
-    }
-
-    /* Abstract needle traveling right → left */
+    /* Needle divider */
     header::after {
       content: "";
       position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 100%;
-      height: 5px;
-      background: linear-gradient(
-        to left,
-        var(--red) 0%,
-        var(--orange) 18%,
-        rgba(211,47,47,0.85) 35%,
-        rgba(211,47,47,0.45) 60%,
-        rgba(211,47,47,0.15) 78%,
-        rgba(211,47,47,0.0) 100%
-      );
+      bottom: -10px;
+      right: -40px;
+      width: 140%;
+      height: 120px;
+      background: url("Needle transparent-01.png") no-repeat right center;
+      background-size: contain;
+      transform: rotate(-90deg) scaleX(1.6);
+      transform-origin: right center;
+      pointer-events: none;
     }
 
     .nav {
       position: relative;
       max-width: 1200px;
       margin: auto;
-      padding: 1.5rem 1rem 1.75rem;
+      padding: 1.5rem 1rem 2.25rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -106,6 +89,19 @@
           #f0f0f0 45%,
           #f4f4f4 100%
         );
+    }
+
+    /* Subtle gauge motif */
+    .hero::after {
+      content: "";
+      position: absolute;
+      right: -90px;
+      bottom: -80px;
+      width: 520px;
+      height: 520px;
+      background: url("HQ transparent-04.png") no-repeat center / contain;
+      opacity: 0.06;
+      pointer-events: none;
     }
 
     .hero-inner {
@@ -242,10 +238,9 @@
         height: 50px;
       }
 
-      header::before {
-        right: -160px;
-        bottom: -140px;
-        opacity: 0.18;
+      header::after {
+        transform: rotate(-90deg) scaleX(1.2);
+        opacity: 0.85;
       }
     }
   </style>
